# functional_programming_lab_2

./: .gitignore  README.md
.github/workflows/: lab2.yml
oa_set/: dune-project
oa_set/lib/: dune  oa_set.ml  oa_set.mli
oa_set/test/: dune  test_oa_set.ml
