(lang dune 3.20)

(name oa_set)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Author Name <author@example.com>")

(maintainers "Maintainer Name <maintainer@example.com>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name oa_set)
 (synopsis "Immutable Set using Open Address Hashing (functorized)")
 (description"An educational immutable Set implemented with open addressing (linear probing), functorized over hash/equal.")
 (depends ocaml alcotest qcheck)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
